--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SERVER_IP}}
-          username: azureuser         # Ganti kalau username VPS kamu bukan ini
+          username: azureuser
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-     
+          port: 22
           script: |
             echo "🔄 Navigating to project folder..."
             cd /home/azureuser/be-bookkeeping
