--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,20 +21,20 @@ jobs:
           port: 22
           script: |
             echo "🔄 Navigating to project folder..."
-            cd /home/azureuser/be-bookkeeping
+            # cd /home/azureuser/be-bookkeeping
 
-            echo "🔄 Pulling latest code..."
-            git pull origin main
+            # echo "🔄 Pulling latest code..."
+            # git pull origin main
 
-            echo "📦 Installing dependencies..."
-            npm install
+            # echo "📦 Installing dependencies..."
+            # npm install
 
-            echo "🔧 Build TypeScript if needed..."
-            npx tsc
+            # echo "🔧 Build TypeScript if needed..."
+            # npx tsc
 
-            echo "🚀 Restarting PM2 process..."
-            pm2 restart be-bookkeeping || pm2 start dist/index.js --name be-bookkeeping
+            # echo "🚀 Restarting PM2 process..."
+            # pm2 restart be-bookkeeping || pm2 start dist/index.js --name be-bookkeeping
 
-            echo "💾 Saving PM2 process..."
-            pm2 save
-            pm2 list
+            # echo "💾 Saving PM2 process..."
+            # pm2 save
+            # pm2 list
