--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@sequelize/core": "^7.0.0-alpha.42",
     "@sequelize/mysql": "^7.0.0-alpha.46",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
