--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
     "dev": "npx ts-node-dev --respawn --transpile-only --poll src/index.ts"
-    
   },
   "keywords": [],
   "author": "",
@@ -17,12 +16,14 @@
     "@sequelize/mysql": "^7.0.0-alpha.46",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.10",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
