--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
     "@types/validator": "^13.15.1",
+    "sequelize-cli": "^6.6.3",
     "typescript": "^5.8.3"
   }
 }
