--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/morgan": "^1.9.10",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
     "@types/swagger-jsdoc": "^6.0.4",
