--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Deploy and Restart PM2
         uses: appleboy/ssh-action@v1.0.3 # Menggunakan versi terbaru
         with:
-          host: 40.81.193.143
-          username: 'atmin'
-          password: 'Hidupjokow1.' # Atau gunakan 'key' untuk SSH key
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USERNAME }}
+          password: ${{ secrets.VPS_PASSWORD }}
           script: |
             # 1. Navigasi ke direktori proyek
             # Menggunakan path dari log error Anda untuk akurasi
